--- a/.gitignore
+++ b/.gitignore
@@ -249,6 +249,6 @@ temp/
 
 # End of https://www.toptal.com/developers/gitignore/api/node,intellij,yarn
 
-getauthtoken-*
+GetAuthToken
 getAuthToken.js
 *.pem
