--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^5.0.0",
+    "@sentry/node": "^6.2.5",
     "@skeldjs/client": "^2.6.10",
     "@skeldjs/constant": "^2.6.3",
     "@skeldjs/core": "^2.6.10",
@@ -25,6 +26,7 @@
     "@skeldjs/util": "^2.6.3",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "heroku-ssl-redirect": "^0.1.1",
     "lodash": "^4.17.20",
