--- a/auproximity-webui/package.json
+++ b/auproximity-webui/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@sentry/browser": "^6.2.5",
+    "@sentry/integrations": "^6.2.5",
     "@skeldjs/constant": "^2.2.10",
     "@skeldjs/util": "^2.5.2",
     "core-js": "^3.6.5",
