Added better name formatting in logs, added mic blocked detection.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proximity Voice Server",
   "author": "cybershard",
   "contributors": [
-    "edqx"
+    "edqx",
+    "miniduikboot"
   ],
   "license": "GPL-3.0-only",
   "scripts": {
