Enable prettier on the entire repo
This commit only makes the necessary changes to the rules and can be
manually reviewed

--- a/auproximity-webui/package.json
+++ b/auproximity-webui/package.json
@@ -64,15 +64,13 @@
     "extends": [
       "plugin:vue/essential",
       "@vue/standard",
-      "@vue/typescript/recommended"
+      "@vue/typescript/recommended",
+      "prettier"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {
-      "quotes": "error",
-      "semi": "error"
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
