Enforce code style in Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,5 @@ jobs:
       - run: npm install -g yarn
       - run: yarn
       - run: yarn heroku-postbuild
+      - run: yarn eslint . --ext .ts,.vue
+      - run: yarn prettier --check .
