Install packages from webui in linting step
This is needed for eslint to import the correct plugins.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,5 +25,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install -g yarn
       - run: yarn
+      - run: yarn --cwd auproximity-webui
       - run: yarn eslint . --ext .ts,.vue
       - run: yarn prettier --check .
