--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	],
 	"license": "GPL-3.0-only",
 	"scripts": {
-		"serve": "nodemon ./src/main.ts",
+		"serve": "ts-node-dev ./src/main.ts",
 		"dev": "ts-node ./src/main.ts",
 		"build": "cross-env NODE_ENV=production tsc -p ./",
 		"build:docker": "docker build -t auproxy-backend .",
@@ -36,6 +36,7 @@
 		"lodash": "^4.17.20",
 		"peer": "^0.6.1",
 		"socket.io": "^3.0.1",
+		"ts-node-dev": "^1.1.6",
 		"tslib": "^2.0.3",
 		"uuid": "^8.3.1"
 	},
@@ -56,7 +57,6 @@
 		"husky": "^6",
 		"lint-staged": "^10",
 		"loadash": "^1.0.0",
-		"nodemon": "^2.0.6",
 		"prettier": "2.2.1",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.2.4"
@@ -92,5 +92,8 @@
 	"lint-staged": {
 		"*.ts": "eslint --cache --fix",
 		"*.{json,md,ts,vue,yaml}": "prettier --write"
-	}
+	},
+	"workspaces": [
+		"auproximity-webui"
+	]
 }
