Make git blame ignore the mass reformatting commit
Git 2.23+ (Released in August 2019) adds the ability to ignore certain
commits when using git blame. This commit adds a file that contains the
id of yesterday's mass reformatting commit and sets up git to always use
this file when running git blame and friends

Credit to https://akrabat.com/ignoring-revisions-with-git-blame/ for
this trick.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"start": "node ./dist/main.js",
 		"lint": "eslint ./src/**/*.ts --fix && prettier --write .",
 		"heroku-postbuild": "yarn build && yarn workspace auproximity-webui run build && mkdir -p dist/dist && cp -r auproximity-webui/dist dist",
-		"prepare": "husky install"
+		"prepare": "husky install && git config blame.ignoreRevsFile .git-blame-ignore-revs"
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^5.0.0",
