--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,5 @@
-yarnPath: .yarn/releases/yarn-3.0.0-rc.2.cjs
+nmHoistingLimits: workspaces
+
 nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-3.0.0-rc.2.cjs
