--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"prepare": "husky install && git config blame.ignoreRevsFile .git-blame-ignore-revs"
 	},
 	"dependencies": {
-		"@microsoft/signalr": "^5.0.0",
 		"@sentry/node": "^6.2.5",
 		"@skeldjs/client": "^2.10.14",
 		"@skeldjs/constant": "^2.10.14",
@@ -33,7 +32,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"heroku-ssl-redirect": "^0.1.1",
-		"lodash": "^4.17.20",
+		"lodash.throttle": "^4.1.1",
 		"peer": "^0.6.1",
 		"socket.io": "^3.0.1",
 		"ts-node-dev": "^1.1.6",
